tests/ui/fn/implied-bounds-unnorm-associated-type.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/implied-bounds-unnorm-associated-type.rs:20:10
   |
LL |     let x = String::from("Hello World!");
   |         - binding `x` declared here
LL |     let y = f(&x, ());
   |               -- borrow of `x` occurs here
LL |     drop(x);
   |          ^ move out of `x` occurs here
LL |
LL |     println!("{}", y);
   |                    - borrow later used here
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let y = f(&x.clone(), ());
   |                 ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0505`.
